--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fe-console-todo",
   "version": "1.0.0",
-  "description": "",
+  "description": "---",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/tdmdgh/fe-console-todo/issues"
   },
-  "homepage": "https://github.com/tdmdgh/fe-console-todo#readme"
+  "homepage": "https://github.com/tdmdgh/fe-console-todo#readme",
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  }
 }
